[FIX] toolbars: Repair specialchar and color pickers - add class for picker type, move styles to css and wrap special chars in <span>s (stops js errors in IE)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@33134 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -732,12 +732,21 @@ a.toolbar {			/* each tool button */
 	line-height: 12px;
 }
 
+.toolbars-picker.specialchar {	/* colours, smilies etc */
+	width: 25em;
+}
+
 .toolbars-picker a {
 	padding: 0px;
 	margin: 0px;
 	display: inline-block;
 	border: #fff 1px solid;
 	overflow: hidden;
+}
+
+.toolbars-picker.color a {
+	width: 14px;
+	height: 12px;
 }
 
 .toolbars-picker a:hover {
